--- a/apgdiff/build.properties
+++ b/apgdiff/build.properties
@@ -4,10 +4,10 @@ source.. = src/main/java/,\
 bin.includes = META-INF/,\
                .,\
                target/generated-sources/antlr4/,\
-               lib/jgrapht-core-0.9.0.jar,\
                OSGI-INF/,\
                about.html,\
                lib/antlr-runtime-4.6.jar,\
-               lib/postgresql-42.2.5.jar,\
-               lib/PgPass-0.0.2.jar,\
-               lib/mssql-jdbc-7.4.1.jre8.jar
+               lib/jgrapht-core-1.4.0.jar,\
+               lib/mssql-jdbc-7.4.1.jre8.jar,\
+               lib/PgPass-1.0.0.jar,\
+               lib/postgresql-42.3.3.jar
